[gd_scene load_steps=2 format=3 uid="uid://cndgq5qmvtnyy"]

[ext_resource type="Script" path="res://scripts/entity-components/jumper_component.gd" id="1_0orma"]

[node name="JumperComponent" type="Node2D"]
script = ExtResource("1_0orma")
_jump_force = 900.0
_jump_delay = 0.1
_max_jumps = 1

[node name="JumpCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="JumpQueueTimer" type="Timer" parent="."]
wait_time = 0.667
one_shot = true

[connection signal="timeout" from="JumpCooldownTimer" to="." method="_on_jump_cooldown_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="JumpQueueTimer" to="." method="_on_jump_queue_timer_timeout"]
